fixes mobile bug and commits changes to static page on mobile

--- a/app/assets/stylesheets/static.css
+++ b/app/assets/stylesheets/static.css
@@ -51,3 +51,25 @@
 .faq_answer{
   font-size: .8em;
 }
+
+@media (max-width: 600px) {
+  .static-page {
+    width: 100%;
+    margin-top: 5%;
+    padding: 3%;
+    background-color: rgba(0,0,0,0.8);
+  }
+  .static-title {
+    padding: 10px 10px 10px 40px;
+    width: 600px;
+    font-family: 'Open Sans', sans-serif;
+  }
+  .static-para {
+    padding: 10px 10px 10px 40px;
+    font-size: 1.7em;
+    font-family: 'Open Sans', sans-serif;
+  }
+  .static-nav {
+    display: none;
+  }
+}
